Created README.md file and done somedoc
